# rust_aws_lambda

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/test-utils/: Cargo.toml
